@@ -4,6 +4,9 @@ Changelog
 1.2.0 (unreleased)
 ------------------
 
+- Use getSite from zope.site instead of zope.app.component.
+  [hannosch]
+
 - Made sure tests don't rely on kupu.
   [hannosch]
 
